college name added

--- a/p.html
+++ b/p.html
@@ -11,7 +11,8 @@
 </tr>
 <tr>
     <td>
-        college name and address.............
+        college name and address............. 
+        hello my collage name is post graduate civil lines skp.
     </td>
 </tr>
 
