--- a/p.html
+++ b/p.html
@@ -11,9 +11,12 @@
 </tr>
 <tr>
     <td>
-        college name and address............. 
+        college name and address
         hello my collage name is post graduate civil lines skp.
     </td>
+</tr>
+<tr>
+
 </tr>
 
 </body>
